...
    override func viewDidLoad() {
        super.viewDidLoad()
        webView.load(URLRequest(url: URL(string: urlString)!))
    }

    @objc func cancelAuthentication() {
        authenticateCompletion(nil, XenditError(errorCode: "AUTHENTICATION_ERROR", message: "Authentication was cancelled"))
    }
    
    override func willMove(toParent parent: UIViewController?) {
        self.parent?.presentationController?.delegate = self
    }
    
...
                let data = responseString.data(using: .utf8),
                let parsedData = try? JSONSerialization.jsonObject(with: data, options: []),
                let parsedDict = parsedData as? [String: Any] {
            handlePostMessageResponse(response: parsedDict)
        } else {
            Log.shared.logUnexpectedWebScriptMessage(url: urlString, message: message)
            authenticateCompletion(nil, XenditError(errorCode: "SERVER_ERROR", message: "Unable to parse server response"))
        }
    }

    func handlePostMessageResponse(response: [String:Any]) {
        let updatedAuthentication = XenditAuthentication(response: response)
        if updatedAuthentication != nil && authentication!.id == updatedAuthentication?.id {
...
